--- a/cv.qmd
+++ b/cv.qmd
@@ -26,7 +26,7 @@ toc-title: "CV Sections"
   * Supervisor: Prof. Tiziana Pozzoli
 :::
 
-## Professional Licensure
+## Professional Qualification
 
 ::: {.arrow-list}
 * **Licensed Psychologist (Section A)**
@@ -98,9 +98,9 @@ toc-title: "CV Sections"
 
 **Languages**
 
-* **Italian:** Mother tongue
+* **Italian:** Native
 * **English:** C1 (IELTS 8.0)
-* **Spanish:** Good
+* **Spanish:** Intermediate
 
 **Digital Skills**
 
