--- a/index.qmd
+++ b/index.qmd
@@ -17,21 +17,20 @@ about:
       href: mailto:matteo.manente.3@phd.unipd.it 
 ---
 
-## Bio
 
-I am a **Licensed Psychologist** and a **PhD Candidate** in Psychological Sciences at the University of Padova.
+I am a **Licensed Psychologist** and **PhD Candidate** in Psychological Sciences at the University of Padova. I am also a member of the **[Psicostat](https://psicostat.dpss.psy.unipd.it/)** research group.
 
-I am also a member of the **[Psicostat](https://psicostat.dpss.psy.unipd.it/)** research group, where we try to make sense of psychological data.
+My research combines **clinical psychology** and **quantitative** and **statistical methodology**, with the goal of improving the robustness and credibility of psychological research.
 
-My work sits at the intersection of clinical psychology and quantitative methodology.
-
-Currently, I am working on the development and application of **Inferential Multiverse Meta-analysis**. My goal is to investigate the robustness of the efficacy of psychotherapies, moving beyond simple effect sizes to understand how analytical choices shape scientific conclusions.
+I am currently developing and applying **Inferential Multiverse Meta-analysis**, moving beyond single effect sizes to examine how analytical decisions shape scientific conclusions.
 
 
 ## Research Interests
-::: {.arrow-list}
-* **Statistics:** Meta-analysis, Multiverse analysis, Permutation-based Inferential methods
-* **Clinical Psychology:** Psychotherapy efficacy, Clinical trial methodology
-* **Open Science:** Research Replicability, Philosophy of Science
+::: {.interests-list}
+* **Statistics**
+  * Meta-analysis, Multiverse analysis, Permutation-based inference
+* **Clinical Psychology**
+  * Psychotherapy efficacy, Clinical trial methodology
+* **Open Science**
+  * Research replicability, Philosophy of Science
 :::
-
