--- a/cv.qmd
+++ b/cv.qmd
@@ -1,8 +1,10 @@
 ---
-title: "Curriculum Vitae"
+title: ""
 toc: true
 toc-title: "CV Sections"
 ---
+
+## Curriculum Vitae
 
 ::: {.callout-note appearance="minimal"}
 <i class="bi bi-file-earmark-pdf"></i> [**Download CV (PDF)**](cv.pdf){.btn .btn-outline-primary .btn-sm role="button"}
@@ -10,77 +12,87 @@ toc-title: "CV Sections"
 
 ## Education
 
-::: {.arrow-list}
+
 * **PhD in Psychological Sciences** (XLI Cycle) | University of Padova
   * *2025 - Present*
   * Supervisor: Prof. Gianmarco Altoè
+
+
 
 * **M.S. in Developmental Clinical Psychology** | University of Padova
   * *2023 - 2025* | **110 cum laude**
   * Thesis: *'Multiverse Meta-Analysis: Proposal of a New Inferential Approach with an Application to Depression Psychotherapy'*
   * Supervisor: Prof. Gianmarco Altoè | Co-Supervisor: Dr. Filippo Gambarota
 
+
+
 * **B.S. in Psychological Sciences and Techniques** | University of Padova
   * *2019 - 2023* | **109/110**
   * Thesis: *Bullying, Cyberbullying and Parenting Styles*
   * Supervisor: Prof. Tiziana Pozzoli
-:::
+
 
 ## Professional Qualification
 
-::: {.arrow-list}
+
 * **Licensed Psychologist (Section A)**
   * *Ordine degli Psicologi del Veneto* | N. 15759 (since Oct. 13, 2025)
-:::
 
-## Academic Publications
 
-::: {.arrow-list}
+## Publications
+
+
 * **Manente, M.**, Altoè, G., Finos, L., & Gambarota, F. (in prep). *A Framework for Inference in Multiverse Meta-analysis with Applications to Real Case Studies*.
 * Marci, T., Calignano, G., **Manente, M.**, Menghini, L., & Liuzza, M. T. (in prep). *Evidence for a Two-Dimensional Structure of the Italian short-form Grit-S in Youth*.
-:::
+
 
 ## Conference Presentations
 
 **2026**
 
-::: {.arrow-list}
-* **Manente, M.**, Altoè, G., Finos, L., & Gambarota, F. (accepted). *Your meta-analysis depends on choices: A multiverse approach to solid inference*. Talk at Cognitive Science Arena (CSA), Bressanone.
-* **Manente, M.**, Finos, L., & Altoè, G. (submitted). *Does EMDR Really Work? A Multiverse Meta-Analysis of PTSD Treatment Efficacy*. Poster at ITRN Meeting, Verona.
-* **Manente, M.** (Invited Talk). *Multiverse Meta-Analysis: Assessing Robustness and Researcher Degrees of Freedom*. University of Innsbruck.
-:::
+* **Manente, M.**, Altoè, G., Finos, L., & Gambarota, F. (accepted). *Your meta-analysis depends on choices: A multiverse approach to solid inference*. Talk at the Cognitive Science Arena (CSA), Bressanone, Italy.
+
+* **Manente, M.**, Finos, L., & Altoè, G. (submitted). *Does EMDR Really Work? A Multiverse Meta-Analysis of PTSD Treatment Efficacy*. Poster at the Italian Reproducibility Network (ITRN) Meeting, Verona, Italy.
+
+* **Manente, M.** (2026). *Multiverse Meta-Analysis: Assessing Robustness and Researcher Degrees of Freedom in Psychological Research*. Invited Talk for the Methodenvertiefung Meta-Analysis Course, University of Innsbruck.
+
 
 **2025**
 
-::: {.arrow-list}
-* **Manente, M.**, Gambarota, F., Finos, L., Vesely, A., & Altoè, G. *Post-Selection Inference in Multiverse Meta-Analysis (PIMMA)*. EMPG Meeting, Padova.
-* **Manente, M.**, Gambarota, F., Finos, L., Vesely, A., & Altoè, G. *Enhancing Transparency and Rigor in Psychology*. AIP Sperimentale, Torino.
-* **Manente, M.**, Gambarota, F., Finos, L., Vesely, A., & Altoè, G. *Choices Shape Conclusions*. Psicostat Meeting (Online).
-* Sità, L., **Manente, M.**, et al. *Set up for a Methodological Review Board in Psychology*. Symposium at PYMS, Tilburg.
-:::
+
+* **Manente, M.**, Gambarota, F., Finos, L., Vesely, A., & Altoè, G. (2025). *Choices Shape Conclusions: An Inferential Multiverse approach to Meta-Analysis*. Talk at the Psicostat Meeting (Online).
+
+* Sità, L., **Manente, M.**, Perugini, A., Calignano, G., Toffalini, E., Marci, T., Pastore, M., & Altoè, G. (2025). *Set up for a Methodological Review Board in Psychology*. Symposium at the Platform for Young Meta-Scientists (PYMS), Tilburg, Netherlands.
+
+* **Manente, M.**, Gambarota, F., Finos, L., Vesely, A., & Altoè, G. (2025). *Enhancing Transparency and Rigor in Psychology: A Multiverse Inference Framework*. Poster at the Associazione Italiana di Psicologia (AIP) Sperimentale National Congress, Torino, Italy.
+
+* **Manente, M.**, Gambarota, F., Finos, L., Vesely, A., & Altoè, G. (2025). *Post-Selection Inference in Multiverse Meta-Analysis (PIMMA)*. Talk at the European Mathematical Psychology Group (EMPG) Meeting, Padova, Italy.
+
+
+
 
 ## Methodological Training
 
 **Advanced Statistics (PhD Courses)**
 
-::: {.arrow-list}
+
 * **Generalised Linear Models** (20h) | University of Padova (Dec 2025)
 * **Basics of Statistical Inference and Linear Models with R** (20h) | University of Padova (Nov-Dec 2025)
 * **Basics of R for Data Science** (10h) | University of Padova (Nov 2025)
-:::
+
 
 **Summer Schools & Workshops**
 
-::: {.arrow-list}
+
 * **Replicability Crisis in Science** (20h) | University of Padova (June 2025)
 * **BEYOND classical p-values** (30h) | University of Trento (May 2025)
 * **PreDoc Camp in Psychology & Cognitive Science** (20h) | University of Trento (April 2025)
 * **ARCA Course: PsychoPy3** (20h) | University of Padova (March 2025)
-:::
+
 
 ## Work Experience
 
-::: {.arrow-list}
+
 * **Educator** | CTRP 'I Cristalli' (VR)
   * *Apr 2025 - Sept 2025*
   * Facilitation of therapeutic interventions and multidisciplinary evaluations.
@@ -92,7 +104,7 @@ toc-title: "CV Sections"
 * **Clinical Internship (250h)** | Mater Salutis Hospital / Day Center 'Il Tulipano' (VR)
   * *2022 - 2023*
   * Support in rehabilitative sessions with psychiatric patients.
-:::
+
 
 ## Skills
 
@@ -110,12 +122,14 @@ toc-title: "CV Sections"
 
 ## Third Mission
 
-::: {.arrow-list}
+
 * **Methodological Review Board (MRB) Development** | University of Padova
   * *March 2024 - Present*
   * Member of the Pilot Study Team. Designing a departmental review board to promote Open Science.
 
+
+
 * **La scienza è aperta: la scienza incontra la città** | University of Padova
   * *Nov 2025* | Organization Committee
   * Public engagement event promoting transparency in research.
-:::
+
