--- a/research.qmd
+++ b/research.qmd
@@ -1,31 +1,28 @@
 ---
-title: "Research"
+title: ""
 ---
 
 ## Publications
 
-::: {.arrow-list}
 * **Manente, M.**, Altoè, G., Finos, L., & Gambarota, F. (in prep). *A Framework for Inference in Multiverse Meta-analysis with Applications to Real Case Studies*.
 
 * Marci, T., Calignano, G., **Manente, M.**, Menghini, L., & Liuzza, M. T. (in prep). *Evidence for a Two-Dimensional Structure of the Italian short-form Grit-S in Youth*.
-:::
+
 
 
 ## Talks, Posters & Presentations
 
-### 2026
+**2026**
 
-::: {.arrow-list}
 * **Manente, M.**, Altoè, G., Finos, L., & Gambarota, F. (accepted). *Your meta-analysis depends on choices: A multiverse approach to solid inference*. Talk at the Cognitive Science Arena (CSA), Bressanone, Italy.
 
 * **Manente, M.**, Finos, L., & Altoè, G. (submitted). *Does EMDR Really Work? A Multiverse Meta-Analysis of PTSD Treatment Efficacy*. Poster at the Italian Reproducibility Network (ITRN) Meeting, Verona, Italy.
 
 * **Manente, M.** (2026). *Multiverse Meta-Analysis: Assessing Robustness and Researcher Degrees of Freedom in Psychological Research*. Invited Talk for the Methodenvertiefung Meta-Analysis Course, University of Innsbruck.
-:::
 
-### 2025
 
-::: {.arrow-list}
+**2025**
+
 
 * **Manente, M.**, Gambarota, F., Finos, L., Vesely, A., & Altoè, G. (2025). *Choices Shape Conclusions: An Inferential Multiverse approach to Meta-Analysis*. Talk at the Psicostat Meeting (Online).
 
@@ -35,4 +32,3 @@ title: "Research"
 
 * **Manente, M.**, Gambarota, F., Finos, L., Vesely, A., & Altoè, G. (2025). *Post-Selection Inference in Multiverse Meta-Analysis (PIMMA)*. Talk at the European Mathematical Psychology Group (EMPG) Meeting, Padova, Italy.
 
-:::
