--- a/research.qmd
+++ b/research.qmd
@@ -18,7 +18,7 @@ title: ""
 
 * **Manente, M.**, Finos, L., & Altoè, G. (submitted). *Does EMDR Really Work? A Multiverse Meta-Analysis of PTSD Treatment Efficacy*. Poster at the Italian Reproducibility Network (ITRN) Meeting, Verona, Italy.
 
-* **Manente, M.** (2026). *Multiverse Meta-Analysis: Assessing Robustness and Researcher Degrees of Freedom in Psychological Research*. Invited Talk for the Methodenvertiefung Meta-Analysis Course, University of Innsbruck.
+* **Manente, M.** (2026). *Multiverse Meta-Analysis: Assessing Robustness and Researcher Degrees of Freedom in Psychological Research*. Invited Talk for the Bachelor's Degree Course "*Methodenvertiefung Meta-Analysis*", University of Innsbruck.
 
 
 **2025**
