--- a/research.qmd
+++ b/research.qmd
@@ -9,14 +9,27 @@ title: ""
 * Marci, T., Calignano, G., **Manente, M.**, Menghini, L., & Liuzza, M. T. (in prep). *Evidence for a Two-Dimensional Structure of the Italian short-form Grit-S in Youth*.
 
 
+<br>
+
+## Awards
+
+**2026**
+
++ **Valiant Award** - Cognitive Science Arena (CSA) 2026
+  * Best oral presentation
+
+
+<br>
+
 
 ## Talks, Posters & Presentations
 
 **2026**
 
-* **Manente, M.**, Altoè, G., Finos, L., & Gambarota, F. (accepted). *Your meta-analysis depends on choices: A multiverse approach to solid inference*. Talk at the Cognitive Science Arena (CSA), Bressanone, Italy.
+* **Manente, M.**, Finos, L., & Altoè, G. *Does EMDR Really Work? A Multiverse Meta-Analysis of PTSD Treatment Efficacy*. Poster at the Italian Reproducibility Network (ITRN) Meeting, Verona, Italy.
 
-* **Manente, M.**, Finos, L., & Altoè, G. (submitted). *Does EMDR Really Work? A Multiverse Meta-Analysis of PTSD Treatment Efficacy*. Poster at the Italian Reproducibility Network (ITRN) Meeting, Verona, Italy.
+* **Manente, M.**, Altoè, G., Finos, L., & Gambarota, F. *Your meta-analysis depends on choices: A multiverse approach to solid inference*. Talk at the Cognitive Science Arena (CSA), Bressanone, Italy.
+
 
 * **Manente, M.** (2026). *Multiverse Meta-Analysis: Assessing Robustness and Researcher Degrees of Freedom in Psychological Research*. Invited Talk for the Bachelor's Degree Course "*Methodenvertiefung Meta-Analysis*", University of Innsbruck.
 
